--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 streamlit
 openai
-numpy
-pandas
-PyPDF2
-pdfminer.six
-scikit-learn
-faiss-cpu          # only if you actually use Faiss (may fail on some build environments)
+langchain
+langchain-community
+tiktoken
+faiss-cpu
 sentence-transformers
-tqdm
+PyPDF2
+pdfplumber
+python-dotenv
+pandas
+numpy
+requests
